<resources>
    <string name="preference_file_key">com.mitrakreasindo.pos.PREFERENCE_FILE_KEY</string>
    <string name="app_name">POS++</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_login">Log in</string>
    <string name="langselection">Language: </string>
    <string-array name="languages">
        <item>Change language</item>
        <item>Indonesian</item>
        <item>English</item>
    </string-array>
    <string name="error_webservice">There is something wrong. Please contact administrator.</string>
    <string name="error_general">There is something wrong</string>
    <string name="prompt_merchant_code">Merchant Code</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register Merchant</string>
    <string name="error_invalid_user">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="link_register">Not registered yet? Click here to register</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="login_message">Hello, %1$s!\nWelcome to POS++</string>
    <string name="logout_message">Goodbye, %1$s!\nSee you again soon</string>
    <string name="person_fullname">Full Name</string>
    <string name="person_id_type">ID Type</string>
    <string name="person_id_number">ID Number</string>
    <string name="person_username">Username</string>
    <string name="person_pass">Password</string>
    <string name="reinput_pass">Re-input Password</string>
    <string name="card_no">Card No</string>
    <string name="person_role">Role</string>
    <string name="visibility">Visibility</string>
    <string name="radio_visible">Visible</string>
    <string name="radio_invisible">Invisible</string>
    <string name="image_code">Image</string>
    <string name="image_select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">POS++ Main Menu</string>
    <string name="error_incorrect_reinput_password">Password is not match</string>
    <string name="error_empty_name">Name required</string>
    <string name="error_empty_pass">Password required</string>
    <string name="error_empty_repass">Re-input password required</string>
    <string name="business_info"><b>BUSINESS INFORMATION</b></string>
    <string name="business_name">Business Name</string>
    <string name="business_shortname">Short Name (Alias)</string>
    <string name="business_type">Business Type</string>
    <string name="business_category">Category</string>
    <string name="business_subcategory">Sub Category</string>
    <string name="business_phone">Phone Number</string>
    <string name="business_address">Address</string>
    <string name="business_city">City</string>
    <string name="business_state">State</string>
    <string name="business_zip">Zip Code</string>
    <string name="owner_info"><b>OWNER INFORMATION</b></string>
    <string name="owner_full_name">Full Name</string>
    <string name="owner_sex">Gender</string>
    <string name="owner_birth_date">Birth Date</string>
    <string name="owner_email">E-mail Address</string>
    <string name="owner_phone">Handphone Number</string>
    <string name="owner_id">ID Number</string>
    <string name="business_register_term">By continuing, I AGREE to\n *<b>Business Agreement</b> and\n *<b>Privacy Policy</b></string>
    <string name="button_create_acc">Create Account</string>
    <string name="error_empty_businessname">Business name required</string>
    <string name="error_empty_businessshortname">Business name (Alias) required</string>
    <string name="error_empty_ownerfullname">Full name required</string>
    <string name="error_empty_owneremail">Email required</string>
    <string name="error_valid_owneremail">Email not valid</string>
    <string name="error_password_invalid">
        - Password must at least 8 chars and max 10 chars\n
        - Contains at least 1 digit (0-9)\n
        - 1 lower case alphabet char (a-z)\n
        - 1 upper case alphabet char (A-Z)\n
        - 1 special char (~!@#$%^*-+=,.?)\n
        - No whitespace allowed
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="users">Users</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="point_of_sales">Point Of Sales</string>
    <string name="sales_by_user">Sales By User</string>
    <string name="reports">Reports</string>
    <string name="floors">Floors</string>
    <string name="release_table_locks">Release Table Locks</string>
    <string name="reset_pickup_counter">Reset Pickup Counter</string>
    <string name="tables">Tables</string>
    <string name="resources">Resources</string>
    <string name="location">Locations</string>
    <string name="consumer_tax_categories">Consumer Tax Categories</string>
    <string name="tax_categories">Tax Categories</string>
    <string name="taxes">Taxes</string>
    <string name="roles">Roles</string>
    <string-array name="spinner_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="spinner_id_type">
        <item>KTP</item>
        <item>SIM</item>
        <item>Paspor</item>
    </string-array>
    <string name="products">Products</string>
    <string name="product_location">Product Location</string>
    <string name="auxiliary_products">Auxiliary Products</string>
    <string name="categories">Categories</string>
    <string name="product_attributes">Product Attributes</string>
    <string name="attributes_values">Attributes Values</string>
    <string name="product_attribute_sets">Product Attribute Sets</string>
    <string name="product_attribute_use">Product Attribute Use</string>
    <string name="stock_diary">Stock Diary</string>
    <string name="stock_movement">Stock Movement</string>
    <string name="promotions">Promotions</string>
    <string name="recipes">Recipes</string>
    <string name="labels_barcode">Label: Barcode</string>
    <string name="inventory">Inventory</string>
    <string name="current_directory">Current Directory</string>
    <string name="inventory_broken">Inventory: Broken</string>
    <string name="inventory_difference">Inventory: Difference</string>
    <string name="inventory_difference_detail">Inventory: Difference Detail</string>
    <string name="inventory_list_detail">Inventory: List Detail</string>
    <string name="inventory_reorder">Inventory: Re-Order</string>
    <string name="product_catalogue_list">Product Catalogue (List)</string>
    <string name="products_report">Products</string>
    <string name="product_labels">Product Labels</string>
    <string name="catalogue">Catalogue</string>
    <string name="labels_shelf_egde_labels">Labels: Shelf-Edge Labels</string>
    <string name="search_product">Search Product</string>
    <string name="sales">Sales</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="options">Options</string>
    <string name="go_to_customers">Go to Customers</string>
    <string name="find_customers">Find Customers</string>
    <string name="split_sale">Split Sale</string>
    <string name="reprint_last_ticket">Reprint Last Ticket</string>
    <string name="new_sale">New Sale</string>
    <string name="cancel_sale">Cancel Sale</string>
    <string name="lay_always">Lay Always</string>
    <string name="send_to_kitchen_printer">Send to Kitchen Printer</string>
    <string name="role">Role</string>
    <string name="save">Save</string>
    <string name="title_activity_product">Product</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="barcode">Barcode</string>
    <string name="reference">Reference</string>
    <string name="name">Name</string>
    <string name="short_name">Short Name</string>
    <string name="category">Category</string>
    <string name="sell_price">Sell Price</string>
    <string name="stock_cost_by_year">Stock Cost by Year</string>
    <string name="stock_volume">Stock Volume</string>
    <string name="catalog_ranking">Catalog ranking</string>
    <string name="pack_quantity">Pack Quantity</string>
    <string name="of_product">of Product</string>
    <string name="add">Add</string>
    <string name="add_product">Add Product</string>
    <string name="add_category">Add Category</string>
    <string name="add_diary">Add Diary</string>
    <string name="date">Date</string>
    <string name="in_stock">In Stock</string>
    <string name="units">Units</string>
    <string name="buy_price">Buy Price</string>
    <string name="reason">Reason</string>
    <string name="add_role">Add Role</string>
    <string name="add_user">Add User</string>
    <string name="data">Data</string>
    <string name="receive">Receive</string>
    <string name="export">Export</string>
    <string name="logout">Logout</string>
    <string name="today_s_revenue">Today\'s Revenue</string>
    <string name="product">Product</string>
    <string name="scan">Scan</string>
    <string name="select">Select</string>
    <string name="price">Price</string>
    <string name="tax_form">Tax Form</string>
    <string name="role_form">Role Form</string>
    <string name="tax">Tax</string>
    <string name="rate">Rate</string>
    <string name="attributes">Attributes</string>
    <string name="multi_pack">Multi Pack</string>
    <string name="adapter_options_dialog">Option</string>
    <string name="adapter_options_delete">Delete</string>
    <string name="alert_dialog_delete_people">Delete User</string>
    <string name="alert_dialog_delete_people_message">Do you really want to delete this user?</string>
    <string name="alert_dialog_delete_role">Delete Role</string>
    <string name="alert_dialog_delete_role_message">Do you really want to delete this role?</string>
    <string name="alert_dialog_delete_taxes">Delete Tax</string>
    <string name="alert_dialog_delete_taxes_message">Do you really want to delete this tax?</string>
    <string name="alert_dialog_delete_category">Delete Category</string>
    <string name="alert_dialog_delete_category_message">Do you really want to delete this category?</string>
    <string name="alert_dialog_delete_product">Delete Product</string>
    <string name="alert_dialog_delete_product_message">Do you really want to delete this product?</string>
    <string name="nav_main">Main</string>
    <string name="nav_sales">Sales</string>
    <string name="nav_edit_sales">Edit Sales</string>
    <string name="nav_customer_payment">Customer Payment</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_close_cash">Close Cash</string>
    <string name="nav_ad_customers">Customers</string>
    <string name="nav_ad_stock">Stock</string>
    <string name="nav_ad_sales">Sales</string>
    <string name="nav_ad_maintenance">Maintenance</string>
    <string name="nav_ad_presence_management">Presence Management</string>
    <string name="nav_ad_administration">Administration</string>
    <string name="maintenance">Maintenance</string>
</resources>