<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/nav_ad_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_stok_mnt_products"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_folder_open"
                android:textAllCaps="false"
                android:onClick="openProductsActivity"
                android:text="@string/products" />

            <Button
                android:id="@+id/btn_stok_mnt_product_location"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_location_on"
                android:textAllCaps="false"
                android:text="@string/product_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_stok_mnt_auxiliary_products"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_menu_share"
                android:textAllCaps="false"
                android:text="@string/auxiliary_products" />

            <Button
                android:id="@+id/btn_stok_mnt_categories"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:onClick="openCategoriesActivity"
                android:drawableTop="@drawable/ic_list"
                android:text="@string/categories"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_stok_mnt_product_attributes"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_tag"
                android:textAllCaps="false"
                android:text="@string/product_attributes" />

            <Button
                android:id="@+id/btn_stok_mnt_attributes_values"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_tag"
                android:textAllCaps="false"
                android:text="@string/attributes_values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_stok_mnt_product_attribute_sets"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_tag"
                android:textAllCaps="false"
                android:text="@string/product_attribute_sets" />

            <Button
                android:id="@+id/btn_stok_mnt_product_attribute_use"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_tag"
                android:textAllCaps="false"
                android:text="@string/product_attribute_use" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_stok_mnt_stock_diary"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_book"
                android:textAllCaps="false"
                android:onClick="openStockDiaryActivity"
                android:text="@string/stock_diary" />

            <Button
                android:id="@+id/btn_stok_mnt_stock_movement"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_reload"
                android:textAllCaps="false"
                android:text="@string/stock_movement" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_stok_mnt_promotions"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_action_calculator"
                android:textAllCaps="false"
                android:text="@string/promotions" />

            <Button
                android:id="@+id/btn_stok_mnt_recipes"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight=".40"
                android:drawableTop="@drawable/ic_speaker_notes"
                android:textAllCaps="false"
                android:text="@string/recipes" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>