<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mitrakreasindo.pos.main.RegisterActivity">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_name" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_below="@id/textview_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textview_pass"
        android:layout_below="@id/edittext_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_pass" />

    <EditText
        android:id="@+id/edittext_pass"
        android:layout_below="@id/textview_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textview_repass"
        android:layout_below="@id/edittext_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reinput_pass" />

    <EditText
        android:id="@+id/edittext_repass"
        android:layout_below="@id/textview_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textview_role"
        android:layout_below="@id/edittext_repass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_role" />

    <Spinner
        android:id="@+id/spinner_roles"
        android:layout_below="@id/textview_role"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:theme="@style/ThemeSpinner"
        style="@style/Widget.AppCompat.Spinner.Underlined" />

    <TextView
        android:id="@+id/textview_visibility"
        android:layout_below="@id/spinner_roles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visibility" />

    <RadioGroup
        android:id="@+id/radiogroup_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/textview_visibility">

            <RadioButton
                android:id="@+id/radiobutton_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_visible" />

            <RadioButton
                android:id="@+id/radiobutton_invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/radio_invisible" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview_image"
        android:layout_below="@id/radiogroup_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_code" />

    <Button
        android:id="@+id/button_imageselect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textview_image"
        android:onClick="Select"
        android:text="@string/image_select" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@id/button_imageselect"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/textview_image"/>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="Confirm"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="Cancel"
        android:text="@string/cancel" />

</RelativeLayout>
