<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maintenance"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_report_user"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_group"
                        android:text="@string/users"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_sales_by_user"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_group"
                        android:text="@string/sales_by_user"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_labels_barcode"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/labels_barcode"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_stok_report_inventory"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/inventory"
                        android:textAllCaps="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_current_directory"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/current_directory"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_stok_report_inventory_broken"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/inventory_broken"
                        android:textAllCaps="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_inventory_difference"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/inventory_difference"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_stok_report_inventory_difference_detail"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/inventory_difference_detail"
                        android:textAllCaps="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_inventory_list_detaile"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/inventory_list_detail"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_stok_report_inventory_reorder"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/inventory_reorder"
                        android:textAllCaps="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_product_catalogue_list"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/product_catalogue_list"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_stok_report_products"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/products_report"
                        android:textAllCaps="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_product_labels"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/product_labels"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/btn_stok_report_catalogue"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/catalogue"
                        android:textAllCaps="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stok_report_labels_shelf_egde_labels"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".40"
                        android:drawableTop="@drawable/ic_action_document"
                        android:text="@string/labels_shelf_egde_labels"
                        android:textAllCaps="false"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>